k8s/Middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: helloworld-stripprefix
  labels:
    app.kubernetes.io/instance: helloworld
    app.kubernetes.io/name: helloworld
    app.kubernetes.io/version: 1.16.0
spec:
  stripPrefix:
    prefixes:
      - "/helloworld"
    forceSlash: false
