k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
  labels:
    app.kubernetes.io/instance: helloworld
    app.kubernetes.io/name: helloworld
    app.kubernetes.io/version: 1.16.0
  name: helloworld
  namespace: default
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: helloworld
    app.kubernetes.io/name: helloworld
  type: ClusterIP
