k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: helloworld
    app.kubernetes.io/name: helloworld
    app.kubernetes.io/version: 1.16.0
  name: helloworld
  namespace: default

spec:
  rules:
    - host: api.jpoblete.cl
      http:
        paths:
          - path: /helloworld/
            pathType: Prefix
            backend:
              service:
                name:  helloworld
                port:
                  number: 8080
